feat: add graph rendering functionality

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>com.online.exam</groupId>
     <artifactId>PrimMST</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -21,17 +21,10 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>3.6.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                        <configuration>
-                            <mainClass>com.online.exam.Main</mainClass>
-                        </configuration>
-                    </execution>
-                </executions>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>com.online.exam.PrimDemo</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
